# netease_music_cover_downloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cover_downloader.h  utils.h
src/: cover_downloader.cpp  main.cpp  utils.cpp
test/: get_html_source_code.ps1  test.py  test_filename.cpp  test_windows_filename.cpp
